# structural-time-core

./: .gitignore  CHANGELOG.md  CITATION.cff  QuickStart.ipynb  README.md  README_TH.md  __init__.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
adapters/: __init__.py  base.py  neural_net.py  sociology.py  transformer.py
analytics/: __init__.py  clustering.py  visualization.py
docs/: api.md  examples.md  index.md
dynamics/: __init__.py  integrator.py  potential.py
examples/: README.md  nn_telemetry_data.json  nn_telemetry_demo.py  sati_adapter.py  sati_demo.py  simulation_data.json  simulation_demo.py  sociology_adapter_demo.py
ontology/: __init__.py  checker.py  space.py
tests/: __init__.py  test_adapters.py  test_analytics.py  test_dynamics.py  test_ontology.py
